fix overflow

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -28,13 +28,10 @@ $colors: (
   box-sizing: border-box;
 }
 
-body {
-  overflow-x: hidden;
-}
-
 html,
 body,
 main {
+  overflow-x: hidden;
   height: 100%;
   min-height: 100%;
   font-family: $font;
